# se-toolkit-lab-8

./: .env.docker.example  REPORT.md  docker-compose.yml  docker-compose.yml.nanobot  pyproject.toml
lab/tasks/required/: task-2.md
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  client.py  server.py  settings.py  tools.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
