[project]
name = "nanobot"
version = "0.1.0"
description = "Custom HKUDS/nanobot setup"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "opentelemetry-distro[otlp]>=0.61b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-logging>=0.61b0",
    "mcp-lms",
    "mcp-obs",
    "mcp-webchat",
    "nanobot-webchat",
    "nanobot-ai",
]

[tool.uv.sources]
nanobot-ai = { url = "https://github.com/HKUDS/nanobot/archive/e7d371ec1e6531b28898ec2c869ef338e8dd46ec.zip" }
mcp-lms = { workspace = true, editable = true }
mcp-obs = { workspace = true, editable = true }
mcp-webchat = { workspace = true, editable = true }
nanobot-webchat = { workspace = true, editable = true }
